@@ -128,9 +128,9 @@
     <security:intercept-url pattern="/spring/logout*" access="ROLE_USER" />
 
     <security:form-login login-page="/spring/login" 
-                             login-url="/spring/login-process" 
-                    default-target-url="/spring/main" 
-            authentication-failure-url="/spring/login?login_error=1" />
+                         login-processing-url="/spring/loginProcess"
+                         default-target-url="/spring/main" 
+                         authentication-failure-url="/spring/login?login_error=1" />
    
     <security:logout logout-url="/spring/logout" logout-success-url="/spring/logout-success" />
 </security:http>
