@@ -23,7 +23,7 @@
 	<bookinfo>
 		<title>Spring Web Flow 2 Reference Guide</title>
 		<subtitle>Reference Documentation</subtitle>
-		<releaseinfo>Version 2.0.0</releaseinfo>
+		<releaseinfo>Version 2.0.1</releaseinfo>
 		<pubdate>April 2008</pubdate>
 		<authorgroup>
 			<author>
